src/main/java/PlpgsqlParser.java
// Generated from PlpgsqlParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PlpgsqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DECLARE=1, BEGIN=2, END=3, EXCEPTION=4, IF=5, THEN=6, ELSIF=7, ELSE=8, 
		CASE=9, WHEN=10, LOOP=11, WHILE=12, FOR=13, FOREACH=14, EXIT=15, CONTINUE=16, 
		RETURN=17, RAISE=18, SELECT=19, INSERT=20, UPDATE=21, DELETE=22, PERFORM=23, 
		EXECUTE=24, INTO=25, FROM=26, WHERE=27, SET=28, VALUES=29, RETURNING=30, 
		TO=31, DISTINCT=32, ALL=33, GROUP=34, HAVING=35, ORDER=36, LIMIT=37, OFFSET=38, 
		ASC=39, DESC=40, NULLS=41, FIRST=42, LAST=43, WITH=44, INTEGER=45, BIGINT=46, 
		SMALLINT=47, NUMERIC=48, DECIMAL=49, REAL=50, DOUBLE=51, VARCHAR=52, CHAR=53, 
		TEXT=54, BOOLEAN=55, DATE=56, TIMESTAMP=57, RECORD=58, IN=59, REVERSE=60, 
		BY=61, ARRAY=62, SLICE=63, NOTICE=64, WARNING=65, INFO=66, DEBUG=67, LOG=68, 
		SQLSTATE=69, ERRCODE=70, MESSAGE=71, DETAIL=72, HINT=73, GET=74, DIAGNOSTICS=75, 
		STACKED=76, CURRENT=77, AS=78, IS=79, NULL=80, NOT=81, AND=82, OR=83, 
		CONSTANT=84, DEFAULT=85, USING=86, STRICT=87, VOLATILE=88, STABLE=89, 
		IMMUTABLE=90, LANGUAGE=91, RETURNS=92, CALLED=93, SECURITY=94, DEFINER=95, 
		INVOKER=96, ASSERT=97, OPEN=98, CLOSE=99, FETCH=100, MOVE=101, FOUND=102, 
		CURSOR=103, TRUE=104, FALSE=105, PERCENT=106, TYPE=107, ROWTYPE=108, DOLLAR=109, 
		ASSIGN=110, CONCAT=111, EQ=112, NEQ=113, LT=114, LTE=115, GT=116, GTE=117, 
		PLUS=118, MINUS=119, STAR=120, SLASH=121, PERCENT_OP=122, CARET=123, SEMI=124, 
		COMMA=125, DOT=126, LPAREN=127, RPAREN=128, LBRACK=129, RBRACK=130, LABEL_START=131, 
		LABEL_END=132, IntegerLiteral=133, NumericLiteral=134, StringLiteral=135, 
		DollarQuotedString=136, Identifier=137, QuotedIdentifier=138, LineComment=139, 
		BlockComment=140, WS=141, ALIAS=142;
	public static final int
		RULE_plpgsqlBlock = 0, RULE_label = 1, RULE_declareSection = 2, RULE_declarationList = 3, 
		RULE_declaration = 4, RULE_dataType = 5, RULE_statementList = 6, RULE_statement = 7, 
		RULE_assignmentStmt = 8, RULE_variableRef = 9, RULE_selectIntoStmt = 10, 
		RULE_selectList = 11, RULE_variableList = 12, RULE_fromClause = 13, RULE_tableRef = 14, 
		RULE_whereClause = 15, RULE_performStmt = 16, RULE_executeStmt = 17, RULE_insertStmt = 18, 
		RULE_columnList = 19, RULE_expressionList = 20, RULE_updateStmt = 21, 
		RULE_assignmentList = 22, RULE_columnAssignment = 23, RULE_deleteStmt = 24, 
		RULE_setStmt = 25, RULE_ifStmt = 26, RULE_caseStmt = 27, RULE_whenClauseList = 28, 
		RULE_whenClause = 29, RULE_loopStmt = 30, RULE_whileStmt = 31, RULE_forStmt = 32, 
		RULE_forQuerySource = 33, RULE_foreachStmt = 34, RULE_exitStmt = 35, RULE_continueStmt = 36, 
		RULE_returnStmt = 37, RULE_raiseStmt = 38, RULE_raiseOptionList = 39, 
		RULE_raiseOption = 40, RULE_assertStmt = 41, RULE_nullStmt = 42, RULE_nestedBlock = 43, 
		RULE_exceptionSection = 44, RULE_exceptionHandlerList = 45, RULE_exceptionHandler = 46, 
		RULE_exceptionConditionList = 47, RULE_exceptionCondition = 48, RULE_getDiagnosticsStmt = 49, 
		RULE_diagnosticsItemList = 50, RULE_diagnosticsItem = 51, RULE_diagnosticsOption = 52, 
		RULE_openCursorStmt = 53, RULE_closeCursorStmt = 54, RULE_fetchStmt = 55, 
		RULE_selectStmt = 56, RULE_groupByClause = 57, RULE_havingClause = 58, 
		RULE_orderByClause = 59, RULE_orderByItem = 60, RULE_limitClause = 61, 
		RULE_parameterList = 62, RULE_parameter = 63, RULE_expression = 64, RULE_whenExprClauseList = 65, 
		RULE_whenExprClause = 66, RULE_arrayExpression = 67, RULE_functionCall = 68, 
		RULE_literal = 69;
	private static String[] makeRuleNames() {
		return new String[] {
			"plpgsqlBlock", "label", "declareSection", "declarationList", "declaration", 
			"dataType", "statementList", "statement", "assignmentStmt", "variableRef", 
			"selectIntoStmt", "selectList", "variableList", "fromClause", "tableRef", 
			"whereClause", "performStmt", "executeStmt", "insertStmt", "columnList", 
			"expressionList", "updateStmt", "assignmentList", "columnAssignment", 
			"deleteStmt", "setStmt", "ifStmt", "caseStmt", "whenClauseList", "whenClause", 
			"loopStmt", "whileStmt", "forStmt", "forQuerySource", "foreachStmt", 
			"exitStmt", "continueStmt", "returnStmt", "raiseStmt", "raiseOptionList", 
			"raiseOption", "assertStmt", "nullStmt", "nestedBlock", "exceptionSection", 
			"exceptionHandlerList", "exceptionHandler", "exceptionConditionList", 
			"exceptionCondition", "getDiagnosticsStmt", "diagnosticsItemList", "diagnosticsItem", 
			"diagnosticsOption", "openCursorStmt", "closeCursorStmt", "fetchStmt", 
			"selectStmt", "groupByClause", "havingClause", "orderByClause", "orderByItem", 
			"limitClause", "parameterList", "parameter", "expression", "whenExprClauseList", 
			"whenExprClause", "arrayExpression", "functionCall", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'DECLARE'", "'BEGIN'", "'END'", "'EXCEPTION'", "'IF'", "'THEN'", 
			"'ELSIF'", "'ELSE'", "'CASE'", "'WHEN'", "'LOOP'", "'WHILE'", "'FOR'", 
			"'FOREACH'", "'EXIT'", "'CONTINUE'", "'RETURN'", "'RAISE'", "'SELECT'", 
			"'INSERT'", "'UPDATE'", "'DELETE'", "'PERFORM'", "'EXECUTE'", "'INTO'", 
			"'FROM'", "'WHERE'", "'SET'", "'VALUES'", "'RETURNING'", "'TO'", "'DISTINCT'", 
			"'ALL'", "'GROUP'", "'HAVING'", "'ORDER'", "'LIMIT'", "'OFFSET'", "'ASC'", 
			"'DESC'", "'NULLS'", "'FIRST'", "'LAST'", "'WITH'", null, "'BIGINT'", 
			"'SMALLINT'", "'NUMERIC'", "'DECIMAL'", "'REAL'", null, "'VARCHAR'", 
			"'CHAR'", "'TEXT'", null, "'DATE'", "'TIMESTAMP'", "'RECORD'", "'IN'", 
			"'REVERSE'", "'BY'", "'ARRAY'", "'SLICE'", "'NOTICE'", "'WARNING'", "'INFO'", 
			"'DEBUG'", "'LOG'", "'SQLSTATE'", "'ERRCODE'", "'MESSAGE'", "'DETAIL'", 
			"'HINT'", "'GET'", "'DIAGNOSTICS'", "'STACKED'", "'CURRENT'", "'AS'", 
			"'IS'", "'NULL'", "'NOT'", "'AND'", "'OR'", "'CONSTANT'", "'DEFAULT'", 
			"'USING'", "'STRICT'", "'VOLATILE'", "'STABLE'", "'IMMUTABLE'", "'LANGUAGE'", 
			"'RETURNS'", "'CALLED'", "'SECURITY'", "'DEFINER'", "'INVOKER'", "'ASSERT'", 
			"'OPEN'", "'CLOSE'", "'FETCH'", "'MOVE'", "'FOUND'", "'CURSOR'", "'TRUE'", 
			"'FALSE'", null, "'TYPE'", "'ROWTYPE'", "'$'", "':='", "'||'", "'='", 
			null, "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", "'*'", "'/'", null, 
			"'^'", "';'", "','", "'.'", "'('", "')'", "'['", "']'", "'<<'", "'>>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DECLARE", "BEGIN", "END", "EXCEPTION", "IF", "THEN", "ELSIF", 
			"ELSE", "CASE", "WHEN", "LOOP", "WHILE", "FOR", "FOREACH", "EXIT", "CONTINUE", 
			"RETURN", "RAISE", "SELECT", "INSERT", "UPDATE", "DELETE", "PERFORM", 
			"EXECUTE", "INTO", "FROM", "WHERE", "SET", "VALUES", "RETURNING", "TO", 
			"DISTINCT", "ALL", "GROUP", "HAVING", "ORDER", "LIMIT", "OFFSET", "ASC", 
			"DESC", "NULLS", "FIRST", "LAST", "WITH", "INTEGER", "BIGINT", "SMALLINT", 
			"NUMERIC", "DECIMAL", "REAL", "DOUBLE", "VARCHAR", "CHAR", "TEXT", "BOOLEAN", 
			"DATE", "TIMESTAMP", "RECORD", "IN", "REVERSE", "BY", "ARRAY", "SLICE", 
			"NOTICE", "WARNING", "INFO", "DEBUG", "LOG", "SQLSTATE", "ERRCODE", "MESSAGE", 
			"DETAIL", "HINT", "GET", "DIAGNOSTICS", "STACKED", "CURRENT", "AS", "IS", 
			"NULL", "NOT", "AND", "OR", "CONSTANT", "DEFAULT", "USING", "STRICT", 
			"VOLATILE", "STABLE", "IMMUTABLE", "LANGUAGE", "RETURNS", "CALLED", "SECURITY", 
			"DEFINER", "INVOKER", "ASSERT", "OPEN", "CLOSE", "FETCH", "MOVE", "FOUND", 
			"CURSOR", "TRUE", "FALSE", "PERCENT", "TYPE", "ROWTYPE", "DOLLAR", "ASSIGN", 
			"CONCAT", "EQ", "NEQ", "LT", "LTE", "GT", "GTE", "PLUS", "MINUS", "STAR", 
			"SLASH", "PERCENT_OP", "CARET", "SEMI", "COMMA", "DOT", "LPAREN", "RPAREN", 
			"LBRACK", "RBRACK", "LABEL_START", "LABEL_END", "IntegerLiteral", "NumericLiteral", 
			"StringLiteral", "DollarQuotedString", "Identifier", "QuotedIdentifier", 
			"LineComment", "BlockComment", "WS", "ALIAS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PlpgsqlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PlpgsqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PlpgsqlBlockContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(PlpgsqlParser.BEGIN, 0); }
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public TerminalNode END() { return getToken(PlpgsqlParser.END, 0); }
		public List<LabelContext> label() {
			return getRuleContexts(LabelContext.class);
		}
		public LabelContext label(int i) {
			return getRuleContext(LabelContext.class,i);
		}
		public DeclareSectionContext declareSection() {
			return getRuleContext(DeclareSectionContext.class,0);
		}
		public ExceptionSectionContext exceptionSection() {
			return getRuleContext(ExceptionSectionContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(PlpgsqlParser.SEMI, 0); }
		public PlpgsqlBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plpgsqlBlock; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlpgsqlParserVisitor ) return ((PlpgsqlParserVisitor<? extends T>)visitor).visitPlpgsqlBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlpgsqlBlockContext plpgsqlBlock() throws RecognitionException {
		PlpgsqlBlockContext _localctx = new PlpgsqlBlockContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_plpgsqlBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LABEL_START) {
				{
				setState(140);
				label();
				}
			}

			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DECLARE) {
				{
				setState(143);
				declareSection();
				}
			}

			setState(146);
			match(BEGIN);
			setState(147);
			statementList();
			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXCEPTION) {
				{
				setState(148);
				exceptionSection();
				}
			}

			setState(151);
			match(END);
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LABEL_START) {
				{
				setState(152);
				label();
				}
			}

			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI) {
				{
				setState(155);
				match(SEMI);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LabelContext extends ParserRuleContext {
		public TerminalNode LABEL_START() { return getToken(PlpgsqlParser.LABEL_START, 0); }
		public TerminalNode Identifier() { return getToken(PlpgsqlParser.Identifier, 0); }
		public TerminalNode LABEL_END() { return getToken(PlpgsqlParser.LABEL_END, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlpgsqlParserVisitor ) return ((PlpgsqlParserVisitor<? extends T>)visitor).visitLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LabelContext label() throws RecognitionException {
		LabelContext _localctx = new LabelContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_label);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(LABEL_START);
			setState(159);
			match(Identifier);
			setState(160);
			match(LABEL_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclareSectionContext extends ParserRuleContext {
		public TerminalNode DECLARE() { return getToken(PlpgsqlParser.DECLARE, 0); }
		public DeclarationListContext declarationList() {
			return getRuleContext(DeclarationListContext.class,0);
		}
		public DeclareSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareSection; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlpgsqlParserVisitor ) return ((PlpgsqlParserVisitor<? extends T>)visitor).visitDeclareSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclareSectionContext declareSection() throws RecognitionException {
		DeclareSectionContext _localctx = new DeclareSectionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declareSection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(DECLARE);
			setState(163);
			declarationList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationListContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public DeclarationListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlpgsqlParserVisitor ) return ((PlpgsqlParserVisitor<? extends T>)visitor).visitDeclarationList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationListContext declarationList() throws RecognitionException {
		DeclarationListContext _localctx = new DeclarationListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declarationList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(165);
				declaration();
				}
				}
				setState(168); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Identifier );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(PlpgsqlParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(PlpgsqlParser.Identifier, i);
		}
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(PlpgsqlParser.SEMI, 0); }
		public TerminalNode CONSTANT() { return getToken(PlpgsqlParser.CONSTANT, 0); }
		public TerminalNode NOT() { return getToken(PlpgsqlParser.NOT, 0); }
		public TerminalNode NULL() { return getToken(PlpgsqlParser.NULL, 0); }
		public TerminalNode ASSIGN() { return getToken(PlpgsqlParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode DEFAULT() { return getToken(PlpgsqlParser.DEFAULT, 0); }
		public TerminalNode CURSOR() { return getToken(PlpgsqlParser.CURSOR, 0); }
		public SelectStmtContext selectStmt() {
			return getRuleContext(SelectStmtContext.class,0);
		}
		public TerminalNode IS() { return getToken(PlpgsqlParser.IS, 0); }
		public TerminalNode FOR() { return getToken(PlpgsqlParser.FOR, 0); }
		public TerminalNode LPAREN() { return getToken(PlpgsqlParser.LPAREN, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(PlpgsqlParser.RPAREN, 0); }
		public TerminalNode ALIAS() { return getToken(PlpgsqlParser.ALIAS, 0); }
		public TerminalNode DOLLAR() { return getToken(PlpgsqlParser.DOLLAR, 0); }
		public TerminalNode IntegerLiteral() { return getToken(PlpgsqlParser.IntegerLiteral, 0); }
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlpgsqlParserVisitor ) return ((PlpgsqlParserVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaration);
		int _la;
		try {
			setState(208);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(170);
				match(Identifier);
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CONSTANT) {
					{
					setState(171);
					match(CONSTANT);
					}
				}

				setState(174);
				dataType(0);
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NOT) {
					{
					setState(175);
					match(NOT);
					setState(176);
					match(NULL);
					}
				}

				setState(183);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ASSIGN:
					{
					setState(179);
					match(ASSIGN);
					setState(180);
					expression(0);
					}
					break;
				case DEFAULT:
					{
					setState(181);
					match(DEFAULT);
					setState(182);
					expression(0);
					}
					break;
				case SEMI:
					break;
				default:
					break;
				}
				setState(185);
				match(SEMI);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(187);
				match(Identifier);
				setState(188);
				match(CURSOR);
				setState(193);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LPAREN) {
					{
					setState(189);
					match(LPAREN);
					setState(190);
					parameterList();
					setState(191);
					match(RPAREN);
					}
				}

				setState(195);
				_la = _input.LA(1);
				if ( !(_la==FOR || _la==IS) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(196);
				selectStmt();
				setState(197);
				match(SEMI);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(199);
				match(Identifier);
				setState(200);
				match(ALIAS);
				setState(201);
				match(FOR);
				setState(205);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Identifier:
					{
					setState(202);
					match(Identifier);
					}
					break;
				case DOLLAR:
					{
					setState(203);
					match(DOLLAR);
					setState(204);
					match(IntegerLiteral);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(207);
				match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
